--- a/money-app/package.json
+++ b/money-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "money-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -17,7 +20,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3",
+    "react-hook-form": "^7.51.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
