--- a/express-backend/package.json
+++ b/express-backend/package.json
@@ -14,9 +14,11 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
 		"nodemon": "^3.1.0",
 		"prisma": "^5.12.1",
 		"ts-node-dev": "^2.0.0",
